--- a/gym_cpp/package.xml
+++ b/gym_cpp/package.xml
@@ -1,16 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>mrRai_sim</name>
+  <name>gym_cpp</name>
   <version>0.0.0</version>
-  <description> This class contain Mri simulation for gazebo simulation</description>
+  <description> gym</description>
 
   <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
   <license>Proprietary</license>
 
   <buildtool_depend>catkin</buildtool_depend>
-
-  <build_depend>raisim</build_depend>
-  <build_depend>raisim_ogre</build_depend>
 
 
 </package>
