--- a/gym_cpp/CMakeLists.txt
+++ b/gym_cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(gym_cpp)
 
 
-find_package(catkin REQUIRED COMPONENTS trpo)
+find_package(catkin REQUIRED COMPONENTS)
 find_package(Eigen3 REQUIRED)
 find_package(OpenCV 3 REQUIRED)
 find_package(OpenMP)
